<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:textSize="35dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupId"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op1"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op2"
            android:textSize="35sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op3"
            android:textSize="35sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op4"
            android:textSize="35sp"
            android:textColor="@color/black"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        android:onClick="submit1"
        android:layout_marginTop="25dp"/>



</LinearLayout>

