<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q2"
        android:textSize="35dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupId"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op5"
            android:id="@+id/waltonid"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op6"
            android:id="@+id/huwaeiid"
            android:textSize="35sp"
            android:textColor="@color/black"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op7"
            android:textSize="35sp"
            android:id="@+id/appleid"
            android:textColor="@color/black"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op8"
            android:id="@+id/googleid"
            android:textSize="35sp"
            android:textColor="@color/black"/>

    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="30sp"
        android:onClick="handleSubmit2"
        android:layout_marginTop="25dp"/>



</LinearLayout>